--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
     </RadioGroup>
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/colors"
         android:layout_width="80dp"
         android:layout_height="48dp"
         android:layout_marginStart="32dp"
@@ -50,19 +50,19 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <RadioButton
-            android:id="@+id/radioButton7"
+            android:id="@+id/radioRect"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/rect" />
 
         <RadioButton
-            android:id="@+id/radioButton8"
+            android:id="@+id/radioCircle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/circle" />
 
         <RadioButton
-            android:id="@+id/radioButton9"
+            android:id="@+id/radioTriangle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/triangle" />
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:text="@string/undo"
-        app:layout_constraintStart_toEndOf="@+id/spinner"
+        app:layout_constraintStart_toEndOf="@+id/colors"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.example.drawshapes.MyView
